# machine_learning_specialization

./: .gitignore  pyproject.toml
ml_course_1/ml_c1_w1/: C1_W1_Lab03_Cost_function_Soln.ipynb
ml_course_2/ml_c2_w2_practice_lab/: C2_W2_Assignment.ipynb
