[tool.poetry]
name = "machine-learning-specialization"
version = "0.1.0"
description = "material do especializacao de machine learning do Coursera"
authors = ["hugo.cruz"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
pandas = "==2.2.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"